# Pelops

./: AUTHORS.md  COPYRIGHT  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  tox.ini
docs/architecture/: README.md  class_diagram.uxf  factories.uxf  module_specs.uxf  object_diagram.uxf
ilmn/pelops/: cli.py  defaults.py  entities.py  notifications.py  repositories.py  request_models.py  result_models.py  selectors.py  stores.py
ilmn/pelops/callers/: caller_factories.py  read_callers.py  rearrangement_callers.py  region_callers.py  region_pair_callers.py  sorters.py
ilmn/pelops/factories/: interactor_factories.py
ilmn/pelops/infrastructure/: blacklist_region_repository.py  log_notifications.py  pysam_repositories.py
ilmn/pelops/interactors/: classify_interactor.py
ilmn/pelops/ui/cli/: controllers.py
ilmn/pelops/ui/cli/presenters/: cli_presenter.py  introspection.py  presenter_factories.py
ilmn/pelops/ui/cli/presenters/views/: json_classification_export_view.py  pysam_segment_export_view.py  view_factories.py
tests/: __init__.py  conftest.py  stubs.py  test_entities.py  test_notification.py  test_repositories.py  test_selectors.py  test_stores.py
tests/callers/: test_caller_factories.py  test_read_callers.py  test_rearrangement_callers.py  test_region_callers.py
tests/data/: HCC1187BL_IGH_DUX4.bam  HCC1187BL_IGH_DUX4.bam.bai  HCC1187BL_IGH_DUX4.cram  HCC1187BL_IGH_DUX4.cram.crai  blacklist.bed  unmapped_mate_test.bam  unmapped_mate_test.bam.bai  unmapped_mate_test_2.bam  unmapped_mate_test_2.bam.bai
tests/factories/: test_interactor_factories.py
tests/infrastructure/: test_blacklist_region_repository.py  test_log_notifications.py  test_pysam_repositories.py
tests/interactors/: test_classify_interactor.py
tests/ui/cli/: test_cli.py  test_controller.py
tests/ui/cli/presenters/: test_classification_export_views.py  test_cli_presenter.py  test_introspection.py  test_presenter_factories.py
tests/ui/cli/presenters/views/: test_pysam_segment_export_view.py  test_view_factories.py
